<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/we_have_sent_otp"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/on"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="+91987654321"
                    android:layout_marginLeft="5dp"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <me.philio.pinentry.PinEntryView
            android:id="@+id/vr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            app:digitBackground="@drawable/pin_bg"
            app:digitElevation="5dp"

            app:digitSpacing="15dp"

            app:digitTextColor="@android:color/darker_gray"
            app:mask=""
            app:pinInputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/waiting_for_otp"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/roboto_regular"

            android:gravity="center"
            android:text="@string/resendotp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/submitotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:padding="12dp"
            android:paddingLeft="5dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />



    </LinearLayout>

</RelativeLayout>