<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        android:elevation="2dp"
        android:background="@android:color/white"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:contentInsetEndWithActions="0dp"
        android:layout_alignParentTop="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="15dp"
            android:paddingLeft="15dp">
            <ImageView
                android:layout_gravity="start"
                android:id="@+id/back"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_back"
                android:layout_width="32dp"
                android:layout_height="32dp" />
            <TextView
                android:layout_toRightOf="@+id/back"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:fontFamily="@font/roboto_regular"
                android:textStyle="bold"
                android:text="@string/reorder"
                android:textColor="#535353"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
<!--
                <ImageView
                    android:id="@+id/reorder_banner"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:scaleType="centerInside"
                    android:layout_height="200dp" />
                -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/reorder_banner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY" />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>


                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/textColor"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congrats"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#D4D1FC"
                app:cardCornerRadius="5dp"
                android:padding="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/question1"
                    android:padding="15dp"/>

            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/rg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp">

                <RadioButton
                    android:id="@+id/rb_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/regularly"/>


                <RadioButton
                    android:id="@+id/rb_few"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/few_times"/>

            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#D4D1FC"
                app:cardCornerRadius="5dp"
                android:padding="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/question2"
                    android:padding="15dp"/>

            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/rg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp">

                <RadioButton
                    android:id="@+id/rb_yes1"
                    android:layout_width="wrap_content"
                    
                    android:layout_height="wrap_content"
                    android:text="@string/yes"/>


                <RadioButton
                    android:id="@+id/rb_no1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/no"/>

            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#D4D1FC"
                app:cardCornerRadius="5dp"
                android:padding="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/question3"
                    android:padding="15dp"/>

            </androidx.cardview.widget.CardView>

            <RadioGroup
                android:id="@+id/rg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp">

                <RadioButton
                    android:id="@+id/rb_yes2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:text="@string/yes"/>


                <RadioButton
                    android:id="@+id/rb_no2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/no"/>

            </RadioGroup>

            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:paddingLeft="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/comment"
                        android:fontFamily="@font/roboto_bold">


                    </TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_margin="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:id="@+id/ed_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/type_here"
                        android:imeOptions="actionNext"
                        android:lines="8"
                        android:textSize="14sp"
                        android:background="@drawable/bt"

                        android:gravity="start"
                        android:maxLines="8"
                        android:textColorHint="@color/texthintColors" />


                </LinearLayout>

                <TextView
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:padding="12dp"
                    android:paddingLeft="5dp"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />



            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>