<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:focusableInTouchMode="true">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:elevation="2dp"
        app:contentInsetEnd="0dp"
        app:contentInsetEndWithActions="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="15dp"
            android:paddingLeft="15dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_gravity="start"
                android:src="@mipmap/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/back"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/feedback"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#535353"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:paddingLeft="20dp"
                android:text="@string/feedback_small"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium">


            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/ed_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt"
                android:fontFamily="@font/roboto_regular"
                android:gravity="start"
                android:hint="@string/type_here"
                android:imeOptions="actionNext"
                android:lines="8"
                android:maxLines="8"
                android:paddingLeft="15dp"

                android:paddingTop="5dp"
                android:textColorHint="@color/texthintColors"
                android:textSize="14sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:padding="12dp"
            android:paddingLeft="5dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>